--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,9 @@
 <!doctype html>
-<html lang="en">
+<html lang="sv">
 
 <head>
   <meta charset="utf-8">
+  <meta name="description" content="Café Lugnet i Malmö">
   <title>CafeLugnet</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
